# PEC-UI-Code

./: .gitignore  IfWeHaveTime.txt  README.md
.claude/: settings.json  settings.local.json
LaserBenchC++/: CMakeLists.txt  README.md  calibration.json
LaserBenchC++/cmake/: CopyIfNotExists.cmake  DeployQtRuntime.cmake
LaserBenchC++/helpers/: PotentiostatHelper.py
LaserBenchC++/src/: main.cpp
LaserBenchC++/src/core/: AppState.cpp  AppState.hpp
LaserBenchC++/src/hardware/: BioLogicController.cpp  BioLogicController.hpp  DeviceContracts.hpp  MockHardware.cpp  MockHardware.hpp  NewportConexBridge.cpp  NewportConexBridgeApi.hpp  NewportConexController.cpp  NewportConexController.hpp  NewportConexHelper.cs  ThorlabsCameraController.cpp  ThorlabsCameraController.hpp
LaserBenchC++/src/ui/: CameraPreviewWidget.cpp  CameraPreviewWidget.hpp  MainWindow.cpp  MainWindow.hpp  Potentiostat3DWidget.cpp  Potentiostat3DWidget.hpp  PotentiostatElectrodeMode.hpp  PotentiostatGraphWidget.cpp  PotentiostatGraphWidget.hpp  PotentiostatHeatmapWidget.cpp  PotentiostatHeatmapWidget.hpp
MainUI/: README_Potentiostat.md  biologic_ca_cli.py  biologic_potentiostat_test_ui.py  laser_presets.json  main_ui.py  motor_camera_combo_test_ui.py  newport_conex_test_ui.py  thorlabs_camera_test_ui.py
Potentiostat/Examples/Python/: ex_api_misc.py  ex_tech_OCV.py
interface_final/: README.md  final_ui.py  potentiostat_support.py
tools/: analyze_measurement_logs.py
